# Gruxi

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  Dockerfiletemp  README.md  SECURITY.md  docker-compose.yml  dockerfile  dockerfile.dev
.github/: copilot-instructions.md
.github/workflows/: release.yml
benches/: gruxi.rs  normalized_path.rs  request_response_bench.rs  syslog_benchmark.rs
development/: docker-compose.yml
development/php-fpm/: docker-compose.yml
development/wordpress/: docker-compose.yml
docker-helpers/php-fpm/: docker-compose.yml
src/: grux_configuration.rs  grux_configuration_struct.rs  grux_external_request_handlers.rs  grux_file_cache.rs  grux_file_util.rs  grux_http_admin.rs  grux_http_handle_request.rs  grux_http_server.rs  grux_http_tls.rs  grux_http_util.rs  grux_log.rs  grux_port_manager.rs  lib.rs  main.rs
src/admin_portal/: http_admin_api.rs  init.rs
src/compression/: compression.rs
src/configuration/: admin_portal.rs  binding.rs  cached_configuration.rs  configuration.rs  core.rs  import_export.rs  load_configuration.rs  mod.rs  request_handler.rs  save_configuration.rs  server_settings.rs  site.rs  tls_settings.rs
src/core/: admin_user.rs  background_tasks.rs  command_line_args.rs  database_connection.rs  database_schema.rs  mod.rs  monitoring.rs  operation_mode.rs  os_signal.rs  running_state.rs  running_state_manager.rs  shutdown_manager.rs  triggers.rs
src/database/: database_migration.rs  database_schema.rs
src/error/: grux_error.rs  grux_error_enums.rs  gruxi_error.rs  gruxi_error_enums.rs  mod.rs
src/external_connections/: external_system.rs  external_system_handler.rs  fastcgi.rs  mod.rs  php_cgi.rs
src/external_connections/managed_system/: php_cgi.rs
src/external_request_handlers/: external_request_handlers.rs  mod.rs  php_handler.rs
src/file/: file_cache.rs  file_reader_cache.rs  file_reader_structs.rs  file_util.rs  mod.rs  normalized_path.rs
src/grux_admin/: http_admin_api.rs  mod.rs
src/grux_core/: admin_user.rs  async_runtime_handlers.rs  background_tasks.rs  command_line_args.rs  database_schema.rs  grux_command_line_args.rs  grux_operation_mode.rs  mod.rs  monitoring.rs  operation_mode.rs
src/grux_external_request_handlers/: grux_handler_php.rs  grux_php_cgi_process.rs
src/grux_http/: handle_request.rs  http_tls.rs  mod.rs
src/http/: file_pattern_matching.rs  handle_request.rs  http_server.rs  http_tls.rs  http_util.rs  mod.rs
src/http/client/: http_client.rs
src/http/request_handlers/: mod.rs  processor_trait.rs  processor_types.rs  request_handler_manager.rs
src/http/request_handlers/processors/: mod.rs  php.rs  php_processor.rs  processor_manager.rs  proxy.rs  proxy_processor.rs  static_files.rs  static_files_processor.rs
src/http/request_handlers/processors/load_balancer/: load_balancer.rs  mod.rs  round_robin.rs
src/http/request_handlers/processors/proxy_helpers/: mod.rs  no_verifier.rs
src/http/request_response/: body_error.rs  grux_body.rs  grux_request.rs  grux_response.rs  gruxi_body.rs  gruxi_request.rs  gruxi_response.rs  mod.rs
src/http/requests/: grux_request.rs  mod.rs
src/http/site_match/: binding_site_cache.rs  mod.rs  site_matcher.rs
src/logging/: access_logging.rs  buffered_log.rs  mod.rs  syslog.rs  system_log.rs
src/network/: port_manager.rs
src/tls/: mod.rs  tls_cert_manager.rs  tls_config.rs
tests/: test_configuration_site.rs  test_grux_configuration.rs  test_grux_configuration_validation.rs  test_grux_file_util.rs  test_grux_handler_php.rs  test_grux_http11_compliance.rs  test_grux_http2_compliance.rs
tests/testdata/: example_certificate.pem  example_certificate_invalid.pem
tests/tests_to_be_fixed/: test_grux_http2_compliance.rs
www-admin/: index.html
www-admin-src/: index.html  package.json  vite.config.js
www-admin-src/src/: App.vue  main.js  style.css
www-admin-src/src/components/: AdminDashboard.vue  ConfigEditor.vue  ConfigurationEditor.vue  LogViewer.vue  LoginForm.vue  OperationModeSelector.vue
www-admin/src/: App.vue  style.css
www-admin/src/components/: AdminDashboard.vue  LoginForm.vue
www-default/: index.html  index.php
www-testing/: index.php
