[package]
name = "grux"
version = "0.1.3"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["server", "http1", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util", "time", "sync", "macros", "process", "signal"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "server"] }
log4rs = "1.3.0"
log = "0.4.27"
sqlite = "0.37.0"
serde = "1.0.219"
serde_json = "1.0.141"
mime_guess = "2.0.5"
futures = "0.3.31"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
lazy_static = "1.4"
tls-listener = { version = "0.11", features = ["rustls-core", "rustls-ring", "rt", "tokio-net"] }
rcgen = { version = "0.14", features = ["ring", "pem"] }
rustls-pki-types = "1.12"
rand = "0.9.2"
clap = { version = "4.5.48", features = ["derive"] }
cached = "0.56.0"
num_cpus = "1.17.0"
rustls-pemfile = "2.2.0"
random_password_generator = "0.1.0"
wildcard = "0.3.0"
tokio-util = "0.7.17"

[lib]
name = "grux"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.8"
tokio-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
webpki-roots = "0.25"
rustls-native-certs = "0.6"
