[package]
name = "gruxi"
version = "0.1.6"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["server", "http1", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util", "time", "sync", "macros", "process", "signal"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2", "client", "client-legacy"] }
sqlite = "0.37.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.141"
mime_guess = "2.0.5"
futures = "0.3.31"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
tls-listener = { version = "0.11", features = ["rustls-core", "rustls-ring", "rt", "tokio-net"] }
rcgen = { version = "0.14", features = ["ring", "pem"] }
rand = "0.9.2"
clap = "4.5.48"
cached = "0.56.0"
num_cpus = "1.17.0"
rustls-pemfile = "2.2.0"
random_password_generator = "0.1.0"
wildcard = "0.3.0"
tokio-util = "0.7.17"
rustls-pki-types = "1.13.1"
http = "1.4.0"
hyper-rustls = { version = "0.27.7", features = ["http1", "http2", "native-tokio", "tls12", "logging"] }
rustls = "0.23.35"
rustls-native-certs = "0.8.3"
webpki-roots = "1.0.4"
dashmap = "6.1.0"

[lib]
name = "gruxi"
path = "src/lib.rs"

[dev-dependencies]
#criterion = { version = "0.8", features = ["html_reports", "cargo_bench_support"] }
#pprof = { version = "0.15", features = ["flamegraph"] }
hyper = { version = "1", features = ["server", "http1", "http2", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "client"] }

#[[bench]]
#name = "syslog_benchmark"
#harness = false
